    load/main.go, cmd/hockeypuck/main.go, errors.go, Makefile, pgp.go,
    pgp_types.go, worker.go:
    - Replace inline loader option with separate loader that does hkp adds.
    - Make number of workers configurable, default to number of cpus.
    - Worker.Start use generic chan interface{} for the stop channel,
      now creates and returns it.
    - Add some doc comments.

 -- Casey Marshall <casey.marshall@gazzang.com>  Tue, 23 Oct 2012 23:24:06 -0500

hockeypuck (0.1~alpha1) precise; urgency=low

  [ Casey Marshall ]
  * === added directory debian, cmd/hockeypuck/main.go,
    server.go, server_test.go, types.go:
    - Opening 0.1~alpha development, create debian/changelog.
    - Added comments to server.
  * === added directory pq, pq/cr_database.sql, pq/dr_database.sql,
    pq/worker.go:
    - Add a first cut at a database schema, random uuid generation.
    - Started pq-backed worker.
  * pq/cr_database.sql, pq/worker.go:
    - Commented the database schema & outlined plan for PqWorker.AddKey.
  * cmd/lspgp/main.go, pq/cr_database.sql, pq/dr_database.sql,
    pq/worker.go:
    - Add AGPL license to these files.
    - Removed redundant long_id and short_id from pub_key.
  * pgp.go:
    - Added public key merge functions we'll need for keyserver updates.
  * pq/cr_database.sql, pq/worker.go, pq/worker_test.go:
    - Add simple db connection test, fixed a few sql and query errors.
  * errors.go, pgp.go, pq/worker.go, pq/worker_test.go:
    - Several postgres database errors fixed.
    - Using flags to configure postgres test database connection.
  * errors.go, pgp.go, pq/cr_database.sql, pq/dr_database.sql,
    pq/worker.go, pq/worker_test.go:
    - Removed key_log table, storing keyrings in binary form in pub_key.
    - Updated unit test to normalize armored keyrings to eliminate
      variations in armor from test conditions.
    - Check for short key ID collisions.
  * cmd/hockeypuck/main.go, pq/worker.go: